// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recruitment/list-stage-changes/breezy-hr ListStageChanges when specified candidate does exist performs correctly 1`] = `
Ok {
  "value": Object {
    "changes": Array [
      Object {
        "createdAt": "2022-12-14T11:23:18.812Z",
        "current": true,
        "id": "668ce6ba2a9d01",
        "name": "Applied",
        "stageId": "applied",
      },
      Object {
        "createdAt": "2022-12-14T11:21:30.696Z",
        "current": false,
        "id": "d32f257eccd501",
        "name": "Feedback",
        "stageId": "feedback",
      },
      Object {
        "createdAt": "2022-12-14T11:19:32.247Z",
        "current": false,
        "id": "33a03e4f1db501",
        "name": "Feedback",
        "stageId": "feedback",
      },
      Object {
        "createdAt": "2022-12-14T11:15:50.674Z",
        "current": false,
        "id": "e5ef879638a501",
        "name": "Feedback",
        "stageId": "feedback",
      },
      Object {
        "createdAt": "2022-12-14T11:15:29.811Z",
        "current": false,
        "id": "8396a389cfd401",
        "name": "Feedback",
        "stageId": "feedback",
      },
    ],
    "rateLimit": Object {
      "bucket": "breezy-hr",
      "remainingRequests": 90,
      "remainingRequestsPercentage": 90,
      "resetTimestamp": 1671611246,
      "totalRequests": 100,
    },
  },
}
`;

exports[`recruitment/list-stage-changes/breezy-hr ListStageChanges when specified candidate does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get candidate by ID f1cfc5572a5701. Check that the candidate with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"breezy-hr\\",
    \\"totalRequests\\": 100,
    \\"remainingRequests\\": 87,
    \\"remainingRequestsPercentage\\": 87,
    \\"resetTimestamp\\": 1671611246
  }
}
AST Path: definitions[0].statements[3].statements[0]
Original Map Location: Line 32, column 5",
}
`;

exports[`recruitment/list-stage-changes/breezy-hr ListStageChanges when specified company does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get company by ID 1b111c1111ef11. Check that the company with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"breezy-hr\\",
    \\"totalRequests\\": 100,
    \\"remainingRequests\\": 98,
    \\"remainingRequestsPercentage\\": 98,
    \\"resetTimestamp\\": 1671618827
  }
}
AST Path: definitions[0].statements[1].statements[0]
Original Map Location: Line 15, column 5",
}
`;
